--- a/references.bib
+++ b/references.bib
@@ -1070,3 +1070,19 @@
   date_added =   {Thu Apr 14 23:12:33 2016},
 }
 
+
+
+@article{partoens-2006-from-graph,
+  author =       {B. Partoens and F. M. Peeters},
+  title =        {From Graphene To Graphite: Electronic Structure
+                  Around the K Point},
+  journal =      {Phys. Rev. B},
+  volume =       74,
+  number =       7,
+  pages =        075404,
+  year =         2006,
+  doi =          {10.1103/physrevb.74.075404},
+  url =          {http://dx.doi.org/10.1103/physrevb.74.075404},
+  DATE_ADDED =   {Wed May 18 15:41:30 2016},
+}
+
