--- a/references.bib
+++ b/references.bib
@@ -1086,3 +1086,38 @@
   DATE_ADDED =   {Wed May 18 15:41:30 2016},
 }
 
+
+
+@article{zan-2012-graph-reknit,
+  author =       {Recep Zan and Quentin M. Ramasse and Ursel Bangert
+                  and Konstantin S. Novoselov},
+  title =        {Graphene Reknits Its Holes},
+  journal =      {Nano Letters},
+  volume =       12,
+  number =       8,
+  pages =        {3936-3940},
+  year =         2012,
+  doi =          {10.1021/nl300985q},
+  url =          {http://dx.doi.org/10.1021/nl300985q},
+  DATE_ADDED =   {Thu May 19 11:44:57 2016},
+}
+
+
+
+@article{wang-2015-molec-valves,
+  author =	 {Luda Wang and Lee W. Drahushuk and Lauren Cantley
+                  and Steven P. Koenig and Xinghui Liu and John
+                  Pellegrino and Michael S. Strano and J. Scott Bunch},
+  title =	 {Molecular Valves for Controlling Gas Phase Transport
+                  Made From Discrete {\aa}ngstr{\"o}m-Sized Pores in
+                  Graphene},
+  journal =	 {Nature Nanotech},
+  volume =	 10,
+  number =	 9,
+  pages =	 {785-790},
+  year =	 2015,
+  doi =		 {10.1038/nnano.2015.158},
+  url =		 {http://dx.doi.org/10.1038/NNANO.2015.158},
+  DATE_ADDED =	 {Mon May 23 09:24:23 2016},
+}
+
