Add new papers to read

--- a/references.bib
+++ b/references.bib
@@ -1121,3 +1121,19 @@
   DATE_ADDED =	 {Mon May 23 09:24:23 2016},
 }
 
+
+
+@article{hauser-2012-methan-selec,
+  author =	 {Andreas W. Hauser and Peter Schwerdtfeger},
+  title =	 {Methane-Selective Nanoporous Graphene Membranes for
+                  Gas Purification},
+  journal =	 {Phys. Chem. Chem. Phys.},
+  volume =	 14,
+  number =	 38,
+  pages =	 13292,
+  year =	 2012,
+  doi =		 {10.1039/c2cp41889d},
+  url =		 {http://dx.doi.org/10.1039/C2CP41889D},
+  DATE_ADDED =	 {Tue May 24 13:01:08 2016},
+}
+
