--- a/references.bib
+++ b/references.bib
@@ -1137,3 +1137,54 @@
   DATE_ADDED =	 {Tue May 24 13:01:08 2016},
 }
 
+
+
+@article{drahushuk-2016-analy-time,
+  author =       {Lee W. Drahushuk and Luda Wang and Steven P. Koenig
+                  and J. Scott Bunch and Michael S. Strano},
+  title =        {Analysis of Time-Varying, Stochastic Gas Transport
+                  Through Graphene Membranes},
+  journal =      {ACS Nano},
+  volume =       10,
+  number =       1,
+  pages =        {786-795},
+  year =         2016,
+  doi =          {10.1021/acsnano.5b05870},
+  url =          {http://dx.doi.org/10.1021/acsnano.5b05870},
+  DATE_ADDED =   {Wed Jun 1 14:49:39 2016},
+}
+
+
+
+@article{sun-2014-mechan-molec,
+  author =       {Chengzhen Sun and Michael S. H. Boutilier and Harold
+                  Au and Pietro Poesio and Bofeng Bai and Rohit Karnik
+                  and Nicolas G. Hadjiconstantinou},
+  title =        {Mechanisms of Molecular Permeation Through
+                  Nanoporous Graphene Membranes},
+  journal =      {Langmuir},
+  volume =       30,
+  number =       2,
+  pages =        {675-682},
+  year =         2014,
+  doi =          {10.1021/la403969g},
+  url =          {http://dx.doi.org/10.1021/la403969g},
+  DATE_ADDED =   {Wed Jun 1 15:27:39 2016},
+}
+
+
+
+@article{liu-2013-permean-h2,
+  author =       {Hongjun Liu and Sheng Dai and De-en Jiang},
+  title =        {Permeance of H2 Through Porous Graphene From
+                  Molecular Dynamics},
+  journal =      {Solid State Communications},
+  volume =       {175-176},
+  number =       {nil},
+  pages =        {101-105},
+  year =         2013,
+  doi =          {10.1016/j.ssc.2013.07.004},
+  url =          {http://dx.doi.org/10.1016/j.ssc.2013.07.004},
+  DATE_ADDED =   {Wed Jun 1 15:35:48 2016},
+}
+
