--- a/hydrogen2D.org
+++ b/hydrogen2D.org
@@ -4,7 +4,7 @@
 
 * Journal
 ** 2016-05-19 Thu
-- cite:zan-2012-graph-reknit Graphene Reknits Its Holes - Zan (Novoselov)
+- cite:zan-2012-graph-reknit Graphene Reknits Its Holes - Zan, Novoselov*
 
 Competing possible research avenues:
 1. Repairing graphene
@@ -12,17 +12,23 @@ Competing possible research avenues:
   2.1. Neural network?
 
 ** 2016-05-20 Fri
-- cite:drahushuk-2012-mechan-gas Mechanisms of Gas Permeation through Single Layer Graphene Membranes - Drahushuk (Strano)
+- cite:drahushuk-2012-mechan-gas Mechanisms of Gas Permeation through Single Layer Graphene Membranes - Drahushuk, Strano*
 
 ** 2016-05-23 Mon
-- cite:du-2011-separ-hydrog Separation of Hydrogen and Nitrogen Gases With  Porous Graphene Membrane - Du (Zhao)
+- cite:du-2011-separ-hydrog Separation of Hydrogen and Nitrogen Gases With  Porous Graphene Membrane - Du, Zhao*
 
 ** 2016-05-24 Tue
-- cite:koenig-2012-selec-molec Selective Molecular Sieving Through Porous Graphene - Keonig (Bunch)
+- cite:koenig-2012-selec-molec Selective Molecular Sieving Through Porous Graphene - Keonig, Bunch*
+
+** 2016-05-25 Wed
+
+- cite:liu-2013-permean-h2 
+- cite:sun-2014-mechan-molec
+- cite:drahushuk-2016-analy-time Analysis of Time-Varying, Stochastic Gas Transport Through Graphene Membranes - Drahushuk, Keonig, Bunch*, Strano*
+
 
 - cite:wang-2015-molec-valves Molecular valves for controlling gas phase transport made from discrete ångström-sized pores in graphene - Wang, Drahushuk (Strano)
 
-** 2016-05-25 Wed
 
 Simulators meeting
 - Jake presented neural network vs reaxff with Au
