--- a/hydrogen2D.org
+++ b/hydrogen2D.org
@@ -826,6 +826,7 @@ def write_image(name, atoms):
     directory = file_path[:file_path.rfind('/')]
     if not os.path.exists(directory):
         os.makedirs(directory)
+#    atoms.rotate('x', np.pi/-5) # TODO: do a .copy() instead of this
     ase_write(file_path, atoms)
     return '[[' + file_path + ']]'
 #+END_SRC
@@ -1332,6 +1333,7 @@ from ase.io import write as ase_write
 from ase.visualize import view
 from jasp import *
 #JASPRC['queue.walltime'] = '10:00:00'
+JASPRC['queue.mem'] = '4GB'
 
 import devon_toolbox as dtb
 
@@ -1393,6 +1395,7 @@ from jasp import *
 import numpy as np
 import sys
 #JASPRC['queue.walltime'] = '10:00:00'
+JASPRC['queue.mem'] = '8GB'
 
 
 def print_converged(num_atoms, energy, time):
@@ -1442,14 +1445,16 @@ with jasp('./dft/' + name,
         pass
 
 file_path = './img/' + name + '.png'
-ase_write(file_path, atoms.repeat((3,3,1)))
+ase_write(file_path, atoms)
 print('[[' + file_path + ']]')
 #+END_SRC
 
 #+RESULTS:
-: Graphene 6.0x6.0 pore=10:
-: Final structure calculation: In progress.
-: [[./img/material/g-mono/6x6/pore=10/vac=16.png]]
+:RESULTS:
+Graphene 6.0x6.0 pore=10:
+Final structure calculation: In progress.
+[[./img/material/g-mono/6x6/pore=10/vac=16.png]]
+:END:
 
 *** Graphene bilayer
 **** DONE Pristine
@@ -1683,6 +1688,8 @@ Final structure calculation: In progress.
 
 **** TODO Pore=10
 
+***** Final
+
 #+BEGIN_SRC python :results drawer
 import sys
 
@@ -1691,6 +1698,85 @@ from ase.visualize import view
 from ase.io import write as ase_write
 from jasp import *
 #JASPRC['queue.walltime'] = '10:00:00'
+JASPRC['queue.mem'] = '8GB'
+
+import devon_toolbox as dtb
+
+
+a = 2.46  # lattice constant
+b = 3.49  # interlayer distance
+gap = np.array([0., 0., b])
+vac = 16. # vaccuum on either side of graphene
+
+a1 = a * np.array([3.0**0.5/2., -1./2., 0.])
+a2 = a * np.array([3.0**0.5/2., 1./2., 0.])
+a3 = np.array([0., 0., vac])
+
+layer1_height = 1./2. * (a3 + gap)
+layer2_height = 1./2. * (a3 - gap)
+rA1 = 0. + layer1_height
+rB1 = a * np.array([1./3.**0.5, 0., 0.]) + layer1_height
+rA2 = a * np.array([1./3.**0.5, 0., 0.]) + layer2_height
+rB2 = a * np.array([2./3.**0.5, 0., 0.]) + layer2_height
+
+atoms = Atoms([Atom('C', rA1),
+               Atom('C', rB1),
+               Atom('C', rA2),
+               Atom('C', rB2)],
+               cell=[a1, a2, a3])
+
+i = 6
+atoms = atoms.repeat([i,i,1])
+
+pore_l1 = [57, 60, 61, 80, 81, 84, 85, 104, 105, 108]
+pore_l2 = [35, 38, 39, 58, 59, 62, 63, 82, 83, 86]
+pore = pore_l1 + pore_l2
+pore.sort()
+for p in reversed(pore):
+#    atoms[p].symbol = "N"
+    del atoms[p]
+
+
+name = 'material/g-bi/6x6/pore=10/final'
+dtb.print_image(name, atoms)
+
+with jasp('./dft/' + name,
+            encut=520,
+            kpts=(6,6,1),
+            xc='PBE',          # GGA functional type
+            ismear=0,          # Gaussian smearing
+            sigma=0.2,         # "Metallic" system smearing
+            isif=2,            # relax positions only
+            ibrion=2,          # conjugate gradient optimizer
+            nsw=100,           # max number of steps to relax
+            atoms=atoms) as calc:
+    try:
+        calc.calculate()
+        energy = atoms.get_potential_energy()/len(atoms)
+        dtb.status_converged(energy, float(get_elapsed_time(calc)))
+    except (VaspSubmitted, VaspQueued):
+        dtb.status_inprogress()
+        ready = False
+        pass
+#+END_SRC
+
+#+RESULTS:
+:RESULTS:
+[[./img/material/g-bi/6x6/pore=10/final.png]]
+Final structure calculation: In progress.
+:END:
+
+***** Kpts test
+
+#+BEGIN_SRC python :results drawer
+import sys
+
+from ase import Atom, Atoms
+from ase.visualize import view
+from ase.io import write as ase_write
+from jasp import *
+#JASPRC['queue.walltime'] = '10:00:00'
+JASPRC['queue.mem'] = '8GB'
 
 import devon_toolbox as dtb
 
@@ -1732,31 +1818,58 @@ for p in reversed(pore):
 name = 'material/g-bi/6x6/pore=10'
 dtb.print_image(name, atoms)
 
-with jasp('./dft/' + name,
-            encut=520,
-            kpts=(6,6,1),
-            xc='PBE',          # GGA functional type
-            ismear=0,          # Gaussian smearing
-            sigma=0.2,         # "Metallic" system smearing
-            isif=2,            # relax positions only
-            ibrion=2,          # conjugate gradient optimizer
-            nsw=100,           # max number of steps to relax
-            atoms=atoms) as calc:
-    try:
-        calc.calculate()
-        energy = atoms.get_potential_energy()/len(atoms)
-        dtb.status_converged(energy, float(get_elapsed_time(calc)))
-    except (VaspSubmitted, VaspQueued):
-        dtb.status_inprogress()
-        ready = False
-        pass
+kpts = [1, 2, 3, 5] 
+print("Failed to complete: [4, 7]")
+
+def calculate(k):
+    with jasp('./dft/' + name + '/kpts={:0.0f}'.format(k),
+                encut=520,
+                kpts=(k,k,1),
+                xc='PBE',          # GGA functional type
+                ismear=0,          # Gaussian smearing
+                sigma=0.2,         # "Metallic" system smearing
+                isif=2,            # relax positions only
+                ibrion=2,          # conjugate gradient optimizer
+                nsw=100,           # max number of steps to relax
+                atoms=atoms) as calc:
+        try:
+            calc.calculate()
+            energy = atoms.get_potential_energy()/len(atoms)
+            dtb.status_converged(energy, float(get_elapsed_time(calc)))
+        except (VaspSubmitted, VaspQueued):
+            dtb.status_inprogress()
+            ready = False
+            pass
+
+for k in kpts:
+    print("kpts=({0},{0},1):".format(k))
+    calculate(k)
 #+END_SRC
 
 #+RESULTS:
 :RESULTS:
 [[./img/material/g-bi/6x6/pore=10.png]]
+Failed to complete: [4, 7]
+kpts=(1,1,1):
+Final structure calculation: In progress.
+kpts=(2,2,1):
+Final structure calculation: In progress.
+kpts=(3,3,1):
+Final structure calculation: In progress.
+kpts=(5,5,1):
 Final structure calculation: In progress.
 :END:
+
+| k-points (ixix1) | Memory requested [GB] |
+|                1 |                   0.9 |
+|                2 |                   3.0 |
+|                3 |                   2.5 |
+|                4 |                  10.4 |
+|                5 |                   5.9 |
+|                6 |                  22.9 |
+|                7 |                  10.8 |
+
+
 
 ** Transport
 *** Graphene monolayer
